--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -83,7 +83,7 @@
 										</section>
 									</section>
 									<hr />
-									<h3>MXL Trailer </h3>
+									<h3>Clip Collection</h3>
 									</p>
 									<p>
 										Hidden Layers
@@ -91,7 +91,7 @@ Performative Media Installation
 									</p>
 									<footer>
 										<ul class="actions">
-											<li><a href="https://www.youtube.com/watch?v=nxJaO1TVh1I" class="button">YouTube</a></li>
+											<li><a href="https://www.youtube.com/watch?v=WtuRi_aDdFI" class="button">YouTube</a></li>
 										</ul>
 									</footer>
 							</div>
